style.css
body {
	margin: 0%;
	background-color: rgb(42, 42, 42);
}

/*Header Section*/

div.main {
	background-color: rgb(42, 42, 42);
	height: 3000px;
	font-family: system-ui;
}

div.main_body {
	animation: myAnim 1s ease-out 0s 1 normal forwards;
}

div.Heading {
	background-image: linear-gradient(black, rgb(42, 42, 42));
	width: fit-content;
	height: 300px;
	color: white;
	text-align: center;
	z-index: 0;
}

div.navbar {
	position: fixed;
	width: 60%;
	height: fit-content;
	z-index: 999;
	margin-left: 20%;
}

span.Header {
	padding-left: 5%;
	display: inline-block;
	margin-top: 20px;
	margin-left: 0%;
	margin-right: 5%;
	margin-bottom: 0%;
	text-decoration: underline;
	font-weight: bold;
	font-size: 24px;
	background: rgb(23, 23, 23);
	border-radius: 20px;
	padding-left: 10px;
	padding-right: 10px;
	padding-bottom: 3px;
	transition: 0.3s;
}

span.Header:hover {
	color: rgb(90, 181, 206);
	scale: 120%
}

div.background {
	align-items: center;
	top: -1%;
	background-color: black;
	height: 75px;
	width: 60%;
	margin-left: 10%;
	margin-top: 20px;
	position: fixed;
	opacity: 70%;
	margin-bottom: 0%;
	opacity: 70%;
	filter: blur(3px);
	z-index: -2;
	backdrop-filter: blur(6px);
	border-radius: 40px;
	transform: translate(-20%, 0);
}

@media (max-width: 1626px) {
	div.background {
		height: 110px;
	}
}

@media (max-width: 908px) {
	div.background {
		height: 165px;
	}
}

/*Home Section*/
h1.Home_Header {
	color: aliceblue;
	margin-left: 12%;
	margin-right: 10%;
	min-width: 400px;
	font-size: 48px;
	text-align: center;
	vertical-align: middle;
}

div.Home {
	display: flex;
	align-items: center;
	gap: 5px;
	z-index: 1;
	position: relative;
	margin-right: 8%;
	margin-top: -10%;
}

img.meimg {
	border-radius: 100px;
	z-index: 0;
	vertical-align: middle;
	margin-right: 5%;
	margin-left: 5%;
	min-width: 400px;
}

@media (max-width: 1225px) {
	.Home {
		display: block;
		flex-direction: column;
	}

	h1 {
		margin: auto;
	}

	img.meimg {
		margin-top: 10px;
		display: block;
		width: 400px;
	}
}

img.github_image {
	width: 80px;
	border-radius: 25%;
	display: inline-block;
	transition: 0.3s;
}

img.github_image:hover {
	scale: 115%
}

a.resume {
	color: aliceblue;
	font-size: 24px;
	text-align: center;
	transform: translate(0, -30px);
	display: inline-block;
	margin-left: 20px;
	background-color: rgb(33, 34, 40);
	padding: 10px;
	border-radius: 20px;
	box-shadow: 4px 4px 5px black;
	transition: 0.3s;
}

a.resume:hover {
	scale: 110%;
	transform: translate(0, -25px);
	box-shadow: 2px 2px 1px black;
}

/* About Me Section */

div.About_Me {
	scroll-margin-top: 40px;
	margin-bottom: 0%;
	display: block;
	margin-top: 40px;
	padding-top: 40px;
	padding-bottom: 8%;
	margin-bottom: 0%;

	padding-left: 20%;
	padding-right: 20%;
	text-align: center;

	background-color: rgb(33, 34, 40);
	--mask: radial-gradient(37.17px at 50% 52.5px, #000 99%, #0000 101%)
			calc(50% - 50px) 0/100px 51% repeat-x,
		radial-gradient(37.17px at 50% -27.5px, #0000 99%, #000 101%) 50% 25px/100px
			calc(51% - 25px) repeat-x,
		radial-gradient(
				37.17px at 50% calc(100% - 52.5px),
				#000 99%,
				#0000 101%
			)
			calc(50% - 50px) 100%/100px 51% repeat-x,
		radial-gradient(
				37.17px at 50% calc(100% + 27.5px),
				#0000 99%,
				#000 101%
			)
			50% calc(100% - 25px) / 100px calc(51% - 25px) repeat-x;
	-webkit-mask: var(--mask);
	mask: var(--mask);
}

h1.About_Me_Header {
	text-decoration: underline;
	color: white;
	text-align: center;
	font-size: 48px;
}

span.About_Me_Text {
	color: white;
	font-size: 36px;
}

/* My Skills Section */
div.My_Skills {
	color: white;
	scroll-margin-top: 50px;
	margin-top: 0%;
	padding-bottom: 8%;
	padding-top: 2%;
	align-items: center;
}

div.My_Skills_Text {
	display: flex;
}

h1.My_Skills_Header {
	color: aliceblue;
	min-width: 400px;
	font-size: 48px;
	text-align: center;
	text-decoration: underline;
	font-weight: bold;
}

div.My_Skills_Textbox1 {
	margin-top: 80px;
	margin-left: 25%;
	margin-right: auto;
	max-width: fit-content;
	font-size: 36px;
	display: inline;
}

div.My_Skills_Textbox2 {
	font-size: 36px;
	margin-top: 80px;
	display: inline;
	margin-left: auto;
	margin-right: 25%;
	width: fit-content;
}

@media (max-width: 850px) {
	div.My_Skills_Textbox1 {
		display: block;
	}

	div.My_Skills_Textbox2 {
		display: block;
	}

	div.My_Skills_Text {
		display: block;
	}
}

li {
	transform: translate(75px);
}

div.experience {
	display: block;
	text-align: center;
	margin-top: 3%;
	width: 60%;
	margin-left: 20%;
	border: 10px groove rgb(53, 56, 56);
	background-color: rgb(33, 34, 40);
}

h1.experience {
	color: aliceblue;
	font-size: 36px;
	border-bottom: 5px groove rgb(53, 56, 56);
	border-left: 5px groove rgb(53, 56, 56);
	border-right: 5px groove rgb(53, 56, 56);
	margin-top: 0%;
	width: 40%;
	margin-left: 30%;
	text-decoration: underline;
}

p.experience {
	font-size: 32px;
	text-align: center;
	width: 90%;
	margin-left: 5%;
}

/* Projects Section */

div.Projects {
	padding-top: 40px;
	padding-bottom: 10px;
	scroll-margin-top: 50px;
	background-color: rgb(33, 34, 40);
	--mask: radial-gradient(37.17px at 50% 52.5px, #000 99%, #0000 101%)
			calc(50% - 50px) 0/100px 51% repeat-x,
		radial-gradient(37.17px at 50% -27.5px, #0000 99%, #000 101%) 50% 25px/100px
			calc(51% - 25px) repeat-x,
		radial-gradient(
				37.17px at 50% calc(100% - 52.5px),
				#000 99%,
				#0000 101%
			)
			calc(50% - 50px) 100%/100px 51% repeat-x,
		radial-gradient(
				37.17px at 50% calc(100% + 27.5px),
				#0000 99%,
				#000 101%
			)
			50% calc(100% - 25px) / 100px calc(51% - 25px) repeat-x;
	-webkit-mask: var(--mask);
	mask: var(--mask);
}

h1.Projects_Header {
	color: white;
	text-align: center;
	text-decoration: underline;
	font-size: 48px;
}

div.Project_odd {
	display: flex;
	color: white;
	margin-top: 80px;
	margin-left: auto;
	margin-right: auto;
	max-width: fit-content;
	align-items: center;
	font-size: 36px;
	margin-bottom: 200px;
	padding-top: 80px;
}

img.Project_odd_Image {
	border-radius: 35% 35% 0% 0%;
	scale: 200%;
}

a.Project_odd_Image {
	margin-left: 20%;
	position: relative;
	text-align: center;
	color: white;
	transition: 0.3s;
}

a.Project_odd_Image:hover {
	opacity: 85%;
	scale: 105%
}

div.Project_odd_Image {
	color: white;
	background-color: #04aa6d;
	width: 200%;
	position: absolute;
	bottom: -32.6%;
	left: 50%;
	transform: translate(-50%, 150%);
}

span.Project_odd_Text {
	margin-left: 20%;
	width: 80%;
	margin-right: 10%;
	text-align: center;
}

@media (max-width: 1425px) {
	.Project_odd {
		display: block;
		flex-direction: column;
	}

	span.Project_odd_Text {
		margin: auto;
		margin-bottom: 0px;
		margin-top: 200px;
	}

	img.Project_odd_Image {
		margin-bottom: 00px;
		margin-left: 0%;
		display: block;
	}

	div.Project_odd_Image {
		margin-bottom: 00px;
	}

	a.Project_odd_Image {
		left: -10.5%
	}

}

div.Project_even {
	display: flex;
	color: white;
	margin-top: 80px;
	margin-left: auto;
	margin-right: auto;
	max-width: fit-content;
	align-items: center;
	font-size: 36px;
	margin-bottom: 200px;
}

img.Project_even_Image {
	border-radius: 35%;
	margin-right: 20%;
}

a.Project_even_Image {
	margin-left: 20%;
	position: relative;
	text-align: center;
	color: white;
	margin-right: 20%;
	transition: 0.3s;
}

a.Project_even_Image:hover {
	opacity: 85%;
	scale: 105%
}

div.Project_even_Image {
	color: white;
	background-color: #04aa6d;
	width: 200%;
	position: absolute;
	text-align: center;
	bottom: -32.6%;
	left: 50%;
	transform: translate(-50%, 150%);
}

span.Project_even_Text {
	margin-left: 10%;
	width: 80%;
	text-align: center;
}

@media (max-width: 1425px) {
	.Project_even {
		display: block;
		flex-direction: column;
	}

	span.Project_even_Text {
		margin: auto;
		margin-top: 0px;
		margin-bottom: 200px;

	}

	img.Project_even_Image {
		margin-top: 320px;
		margin-bottom: 0px;
		margin-left: 0%;
		margin-right: 0%;
		display: block;
	}
}

h2.title {
	color: white;
	font-size: 48px;
	text-align: center;
	text-decoration: underline;
}

div.My_Skills_Textbox1.in-view {
	animation: myAnim3 1s ease-out 0s 1 normal forwards;
}

div.My_Skills_Textbox2.in-view {
	animation: myAnim2 1s ease-out 0s 1 normal forwards;
}

.in-view {
	animation: myAnim 1s ease-out 0s 1 normal forwards;
}

@keyframes myAnim {
	0% {
		opacity: 0;
		transform: translateY(250px);
	}

	100% {
		opacity: 1;
		transform: translateY(0);
	}
}

@keyframes myAnim2 {
	0% {
		opacity: 0;
		transform: translateX(250px);
	}

	100% {
		opacity: 1;
		transform: translateX(0);
	}
}
@keyframes myAnim3 {
	0% {
		opacity: 0;
		transform: translateX(-250px);
	}

	100% {
		opacity: 1;
		transform: translateX(0);
	}
}

.not-in-view {
	opacity: 0;
}

/* Contact Section */

div.contact_me {
	padding-bottom: 50px;
}

div.contact_body {
	display: flex;
}

h1.contact_header {
	color: white;
	text-align: center;
	font-size: 48px;
	text-decoration: underline;
	box-sizing: border-box;
	margin-bottom: 50px;
}

input[type='text'],
select,
textarea {
	width: 100%;
	padding: 12px;
	border: 1px solid rgb(33, 34, 40);
	border-radius: 4px;
	box-sizing: border-box;
	margin-top: 6px;
	margin-bottom: 16px;

	resize: none;
	background-color: rgb(57, 58, 66);
	color: aliceblue;
	display: block;
}

input[type='submit'] {
	background-color: #04aa6d;
	color: aliceblue;
	padding: 12px 20px;
	border: none;
	border-radius: 4px;
	cursor: pointer;
}

input[type='submit']:hover {
	background-color: #45a049;
}

textarea.message {
	width: 100%;
}

.container {
	border: 10px groove rgb(53, 56, 56);
	width: 35%;
	margin-left: -5%;
	border-radius: 5px;
	padding: 20px;
	background-color: rgb(42, 42, 42);
}

label {
	color: aliceblue;
}

div.contact_text {
	padding-top: 100px;
	width: 50%;
	font-size: 32px;
	margin-left: 10%;
	color: aliceblue;
}

a.gmail {
	color: lightblue;
}

a:visited {
	color: lightblue;
}

